# agent-mutator

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
skills/agent-mutator/: SKILL.md
src/: copy_tree.rs  lib.rs  main.rs  mutants.rs  operators.rs  output.rs  parser.rs  parser_js.rs  parser_rust.rs  runner.rs  safety.rs  state.rs
tests/: test_e2e.rs  test_lib.rs  test_operators.rs  test_parser.rs  test_parser_js.rs  test_parser_rust.rs  test_runner.rs  test_safety.rs  test_state.rs
