[package]
name = "mutator"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
similar = "2"
tempfile = "3"
console = "0.15"
camino = "1"
fastrand = "2"

